# agentmemory

./: .env.example  .gitignore  AGENTS.md  Dockerfile  OPENCLAW_SETUP.md  README.md  VISION.md  docker-compose.yml  pyproject.toml
agentmemory/: __init__.py  config.py
agentmemory/cli/: main.py
agentmemory/core/: consolidation.py  embeddings.py  memory.py  models.py  reranker.py  retrieval.py
agentmemory/db/: age_client.py  postgres.py  redis_client.py  schema.sql
agentmemory/mcp/: server.py  tools.py
extension/: agentmemory.mcpb  build.sh  manifest.json
extension/server/: index.js
rules/: CLAUDE.md  chatgpt-instructions.md  cursor.mdc  openclaw.md
site/: index.html  script.js  style.css
tests/: conftest.py  test_age_client.py  test_core_memory.py  test_e2e.py  test_embeddings.py  test_mcp_tools.py  test_redis_client.py  test_retrieval.py
